@@ -9,3 +9,4 @@ dist            = {{$dist->name}}
 bugtracker      = rt
 authority       = cpan:{{$dist->stash_named('%PAUSE')->username}}
 github_user     = {{chomp($_ = `git config --get github.user`); $_}}
+install_command = cpanm .
